[package]
name="dell-vostro-1310"
description="Keyboard firmware written in Rust"
authors=["Haobo Gu <haobogu@outlook.com>"]
homepage="https://github.com/haobogu/rmk"
repository="https://github.com/haobogu/rmk"
license="MIT OR Apache-2.0"
edition="2021"
version="0.1.0"

[dependencies]
cortex-m-rt="0.7.5"
cortex-m={version="0.7.7", features=['critical-section-single-core']}
defmt="1.0.1"
embassy-executor={version="0.7", features=["defmt", "arch-cortex-m", "executor-thread"]}
embassy-stm32={version="0.2", features=["stm32f103ve", "defmt", "memory-x", "time-driver-any"]}
embassy-time={version="0.4", features=["tick-hz-32_768", "defmt"]}
panic-halt="1.0.0"
rmk={version="0.6.1", default-features=false, features=["col2row"]}                             # without ["storage", "defmt"] features

[[bin]]
name="dell-vostro-1310"
test=false
bench=false

[profile.dev]
codegen-units=1      # better optimizations
debug=true
opt-level="s"
overflow-checks=true
lto="fat"
panic='unwind'

[profile.release]
codegen-units=1       # better optimizations
debug=true            # no overhead for bare-metal
opt-level="z"         # optimize for binary size
overflow-checks=false
lto="fat"
